[package]
name = "dhstore"
version = "0.0.1"
authors = ["Remi Rampin <remirampin@gmail.com>"]
edition = "2018"
repository = "https://github.com/remram44/dhstore"

[[bin]]
name = "dhstore"
doc = false

[dependencies]
cdchunking = "0.2"
clap = "2.20"
log = { version = "0.4", features = ["std"] }
rand = "0.3"
sha2 = "0.4"
termcolor = "0.3"
